@@ -51,6 +51,8 @@ pyqtgraph-0.9.9  [unreleased]
     - Added configurable formatting for TableWidget
     - Added 'stepMode' argument to PlotDataItem()
     - Added ViewBox.invertX()
+    - Docks now have optional close button
+    - Added InfiniteLine.setHoverPen
 
   Bugfixes:
     - PlotCurveItem now has correct clicking behavior--clicks within a few px
